Auth0 filtering, deleting from database live
